--- a/src/main/webapp/lastmonth.html
+++ b/src/main/webapp/lastmonth.html
@@ -19,10 +19,10 @@
 <script type="text/javascript" src="lib/DD_belatedPNG_0.0.8a-min.js" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
-<title>前日耗电量折线图</title>
+<title>最近一月耗电量折线图</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 数据查看 <span class="c-gray en">&gt;</span> 前日耗电量 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 数据查看 <span class="c-gray en">&gt;</span> 最近一月耗电量 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<div id="container" style="min-width:700px;height:400px"></div>
 </div>
@@ -37,14 +37,14 @@
 <script type="text/javascript" src="lib/hcharts/Highcharts/5.0.6/js/highcharts.js"></script>
 <script type="text/javascript">
 $(function () {
+	var chart = {
+      type: 'column'
+   };
    var title = {
-      text: '前日耗电量'
+      text: '最近一月耗电量'
    };
    var subtitle = {
       text: '单位为kwh'
-   };
-   var xAxis = {
-      categories: [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23]
    };
    var yAxis = {
       title: {
@@ -69,18 +69,19 @@ $(function () {
    };
 
 	$.ajax({
-		url:'/data/yesterday_energy',
+		url:'/data/last_month',
 		type:'POST', //GET
 		dataType:'json',
 		success:function(data){
 		   var json = {};
+		   json.chart = chart;
 		   json.title = title;
 		   json.subtitle = subtitle;
-		   json.xAxis = xAxis;
+		   json.xAxis = data.xAxis;
 		   json.yAxis = yAxis;
 		   json.tooltip = tooltip;
 		   json.legend = legend;
-		   json.series = data;
+		   json.series = data.list;
 		   $('#container').highcharts(json);
 		}
 	})
